first_term_project/Pressure Controller/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
03:00:27 **** Build of configuration Debug for project lab2_unit6 ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m3 -g3 -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc -o "lab2_unit6.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Mastering_embeded_sytem\repo\Mastering_Embedded_Systems\first_term_project\Pressure Controller\lab2_unit6\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab2_unit6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: lab2_unit6.elf
 
arm-none-eabi-size   lab2_unit6.elf 
arm-none-eabi-objdump -h -S  lab2_unit6.elf  > "lab2_unit6.list"
arm-none-eabi-objcopy  -O binary  lab2_unit6.elf  "lab2_unit6.bin"
   text	   data	    bss	    dec	    hex	filename
    652	      8	   1568	   2228	    8b4	lab2_unit6.elf
Finished building: default.size.stdout
 
Finished building: lab2_unit6.bin
 
Finished building: lab2_unit6.list
 
03:04:02 **** Incremental Build of configuration Debug for project lab2_unit6 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 -mcpu=cortex-m3 -g3 -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc -gdwarf-2 "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc -gdwarf-2 -o "lab2_unit6.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Mastering_embeded_sytem\repo\Mastering_Embedded_Systems\first_term_project\Pressure Controller\lab2_unit6\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab2_unit6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: lab2_unit6.elf
 
arm-none-eabi-objdump -h -S  lab2_unit6.elf  > "lab2_unit6.list"
arm-none-eabi-objcopy  -O binary  lab2_unit6.elf  "lab2_unit6.bin"
arm-none-eabi-size   lab2_unit6.elf 
   text	   data	    bss	    dec	    hex	filename
    652	      8	   1568	   2228	    8b4	lab2_unit6.elf
Finished building: default.size.stdout
 
Finished building: lab2_unit6.bin
Finished building: lab2_unit6.list
 
 
03:08:27 **** Incremental Build of configuration Debug for project lab2_unit6 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "lab2_unit6.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Mastering_embeded_sytem\repo\Mastering_Embedded_Systems\first_term_project\Pressure Controller\lab2_unit6\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab2_unit6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: lab2_unit6.elf
 
arm-none-eabi-objdump -h -S  lab2_unit6.elf  > "lab2_unit6.list"
arm-none-eabi-objcopy  -O binary  lab2_unit6.elf  "lab2_unit6.bin"
arm-none-eabi-size   lab2_unit6.elf 
   text	   data	    bss	    dec	    hex	filename
    776	      8	   1568	   2352	    930	lab2_unit6.elf
Finished building: default.size.stdout
 
Finished building: lab2_unit6.bin
Finished building: lab2_unit6.list
 
 
03:27:17 **** Incremental Build of configuration Debug for project lab2_unit6 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "lab2_unit6.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Mastering_embeded_sytem\repo\Mastering_Embedded_Systems\first_term_project\Pressure Controller\lab2_unit6\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab2_unit6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: lab2_unit6.elf
 
arm-none-eabi-objdump -h -S  lab2_unit6.elf  > "lab2_unit6.list"
arm-none-eabi-objcopy  -O binary  lab2_unit6.elf  "lab2_unit6.bin"
arm-none-eabi-size   lab2_unit6.elf 
   text	   data	    bss	    dec	    hex	filename
    776	      8	   1568	   2352	    930	lab2_unit6.elf
Finished building: default.size.stdout
 
Finished building: lab2_unit6.bin
Finished building: lab2_unit6.list
 
 
03:31:34 **** Incremental Build of configuration Debug for project lab2_unit6 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "lab2_unit6.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Mastering_embeded_sytem\repo\Mastering_Embedded_Systems\first_term_project\Pressure Controller\lab2_unit6\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab2_unit6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: lab2_unit6.elf
 
arm-none-eabi-objdump -h -S  lab2_unit6.elf  > "lab2_unit6.list"
arm-none-eabi-objcopy  -O binary  lab2_unit6.elf  "lab2_unit6.bin"
arm-none-eabi-size   lab2_unit6.elf 
   text	   data	    bss	    dec	    hex	filename
    776	      8	   1568	   2352	    930	lab2_unit6.elf
Finished building: default.size.stdout
 
Finished building: lab2_unit6.bin
Finished building: lab2_unit6.list
 
 
03:37:00 **** Incremental Build of configuration Debug for project lab2_unit6 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:40:32: error: 'EXTI_BASEE' undeclared (first use in this function); did you mean 'EXTI_BASE'?
 #define EXTI_IMR *(vuint32_t*)(EXTI_BASEE+0x00)
                                ^
../Src/main.c:73:2: note: in expansion of macro 'EXTI_IMR'
  EXTI_IMR|=(1<<0);
  ^~~~~~~~
../Src/main.c:40:32: note: each undeclared identifier is reported only once for each function it appears in
 #define EXTI_IMR *(vuint32_t*)(EXTI_BASEE+0x00)
                                ^
../Src/main.c:73:2: note: in expansion of macro 'EXTI_IMR'
  EXTI_IMR|=(1<<0);
  ^~~~~~~~
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
03:37:12 **** Incremental Build of configuration Debug for project lab2_unit6 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "lab2_unit6.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Mastering_embeded_sytem\repo\Mastering_Embedded_Systems\first_term_project\Pressure Controller\lab2_unit6\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lab2_unit6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: lab2_unit6.elf
 
arm-none-eabi-objdump -h -S  lab2_unit6.elf  > "lab2_unit6.list"
arm-none-eabi-objcopy  -O binary  lab2_unit6.elf  "lab2_unit6.bin"
arm-none-eabi-size   lab2_unit6.elf 
   text	   data	    bss	    dec	    hex	filename
    780	      8	   1568	   2356	    934	lab2_unit6.elf
Finished building: default.size.stdout
 
Finished building: lab2_unit6.bin
Finished building: lab2_unit6.list
 
 
